sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: '(' expected but identifier found.
  if g == 0 {g+=1} else {
     ^AlgGnomeSort:8: error: illegal start of simple expression
    if (plusPetit(g,g+1)) {g+=1} else {echange(g,g+1);g-=1}}}}
                                                             ^